--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             <div class="message-text message-fontcolor">Are you at least 18 years old?</div>
             <div class="call-to-action">
                 <section class="button-section"> 
-				<a class="destination-target_url" id="destination_url" href="https://dgkjq.paiatialdates.net?utm_source=da57dc555e50572d&s1=12963&s2=1143005&j1=1"> <button type="submit" class="action-button button button-shape button-backgroundcolor"> <span class="button-text button-fontcolor">Yes</span> </button></a>
+				<a class="destination-target_url" id="destination_url" href="https://dgkjq.bestaffaiir.com/?utm_source=da57dc555e50572d&s1=12963&s2=1143005&j1=1"> <button type="submit" class="action-button button button-shape button-backgroundcolor"> <span class="button-text button-fontcolor">Yes</span> </button></a>
                 </section>
 				<footer>
 				<!--<a href="https://dateyougo.xyz/qFDwx2" target="_blank">Privacy Policy</a>-->
